--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -16,7 +16,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required><br><br>
             
-            <button type="submit">Login</button>
+            <button type="submit">Signin</button>
             <a href="../User/user.html"><button type="button">Sign Up</button></a>
         </form>
     </div>
