--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -17,7 +17,7 @@
             <input type="password" id="password" name="password" required><br><br>
             
             <button type="submit">Signin</button>
-            <a href="../User/user.html"><button type="button">Sign Up</button></a>
+            <a href="../User/user.html"><button type="button">Sign_Up</button></a>
         </form>
     </div>
 
