changed the button name

--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -16,8 +16,8 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required><br><br>
             
-            <button type="submit">Lon</button>
-            <a href="../User/user.html"><button type="button">Sign Up</button></a>
+            <button type="submit">Log in</button>
+            <a href="../User/user.html"><button type="button">Sign Up up up</button></a>
         </form>
     </div>
 
